test/good/classes/print02.px

class Test def
    Bool b: false

    func toString() String def
        return self.b.toString()

obj = Test()
print "obj={obj}"
