test/bad/classes/print03.px

class Test def
    func toString(Int x) String def
        return ""

print Test()
